# DianaFit

./: .gitignore  CHANGELOG.md  DIANA_CHAT_TROUBLESHOOTING.md  FIXES_SUMMARY.md  GYM_VIDEO_INTEGRATION_GUIDE.md  MEAL_DIVERSITY_GUIDE.md  Procfile  README.md  STEPS_OAUTH_SETUP.md  SWIPESLIDER_TEST_GUIDE.md  SWIPESLIDER_VISUAL_FIXES.md  USER_GUIDE_STEPS.md  VIDEO_INTEGRATION_FINAL.md  VIDEO_INTEGRATION_GUIDE.md  VIDEO_INTEGRATION_README.md  check-api-key-formats.bat  check-api-key-formats.js  check-diana-chat.bat  check-mistral-api.js  check-servers.bat  check-videos.js  check_gym_videos.bat  check_videos.bat  cleanup-backend.bat  comprehensive-check.js  create_gym_folders.bat  create_video_folders.bat  exercise_mapping.json  exercise_names_list.md  gym_workouts_mapping.json  home_workouts_mapping.json  localStorage.removeItem(key))  package-lock.json  package.json  push_to_github.bat  pyproject.toml  render.yaml  requirements.txt  reset-program.bat  reset-program.js  (+10 more)
.github/: copilot-instructions.md
backend/: buildIndex.py  diana-trainings.jsonl  index.js  kb_faiss.index  kb_meta.jsonl  knowledgeBase.js  knowledge_base_chunks.jsonl  package-lock.json  package.json  programApi.js  qa.py  quiz-config.json  userProgressLogger.js
backend/backup_files/: kb_faiss.index  kb_meta.jsonl  rebuild_index.bat  requirements.txt
backend/routes/: recipeRoutes.js
backend/utils/: aiUtils.js  recipeUtils.js  recipeUtils.js.tmp  recipeUtils.new.js  recipesDB.js  recipesDB.js.tmp  recipesDB.new.js
frontend/: README.md  package-lock.json  package.json  test-videos.html
(+56 files in other folders)
